Fix bottom clipping

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -25,9 +25,13 @@ body {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
 }
 
+#gallerycontainer {
+    height: calc(100vh - 250px) !important;
+}
+
 .scrollable {
     overflow:auto;
-    height: calc(100vh - 158px);
+    height: 100%;
 }
 
 .home {
@@ -48,8 +52,8 @@ body {
 }
 
 .ig-img {
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
 }
 
 .img-fluid {
@@ -127,7 +131,6 @@ body {
 .masonry {
   display: flex;
   flex-flow: row wrap;
-  margin-left: -8px; /* Adjustment for the gutter */
   width: 100%;
 }
 
@@ -138,7 +141,7 @@ body {
     max-width: 50%;
     overflow: hidden;
     border-radius: 5px;
-    margin: 0 0 8px 8px;
+    margin: 0 4px 8px 4px;
     background-color: #333;
     color: white;
     position: relative;
@@ -328,7 +331,7 @@ body {
 @media (max-width: 1080px) {
 
     .scrollable {
-        height: calc(100vh - 250px) !important;
+        height: 100%;
     }
     .card-columns {
         column-count: 2;
@@ -429,7 +432,7 @@ body {
     }
 
     .navbar-nav {
-            font-size: 1.5rem;
+            font-size: 2.5rem;
             padding-left:62px;
     }
 
